--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,43 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
+		<title>Timber</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
+		<link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
+
+		<link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
+		<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+		<link rel="stylesheet" type="text/css" href="/assets/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
 		
+		<script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
+		<script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
+		<script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
+		<script type="text/javascript" src="/assets/camera.min.js"></script>
+		<script type="text/javascript" src="/assets/myscript.js"></script>
+		<script type="text/javascript" src="/assets/sorting.js" ></script>
+		<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
+		<!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
+		
+
+		<script>
+			jQuery(function(){
+					jQuery('#camera_wrap_1').camera({
+					transPeriod: 500,
+					time: 3000,
+					height: '490px',
+					thumbnails: false,
+					pagination: true,
+					playPause: false,
+					loader: false,
+					navigation: false,
+					hover: false
+				});
+			});
+		</script>
 		
 	</head>
 	<body>
@@ -737,7 +773,7 @@
 	<script src="/assets/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/assets/bootstrap.min.js"></script>
 	<script src="/assets/jquery.slicknav.js"></script>
-	<script>
+	<script type="text/javascript">
 			$(document).ready(function(){
 			$(".bhide").click(function(){
 				$(".hideObj").slideDown();
