error fixed and index edited

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2064,6 +2064,14 @@ margin-bottom: 35px !important;
 		background-color: #101010!important;
     }
 
-/**/
+
+/* #################
+ 		General
+####################*/
+
+.mar_topm10p {
+	margin-top: -20px;
+}
+
 
 
