--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -78,16 +78,26 @@
 			<div class="row wrap">
 				<div class="col-md-12 gallery"> 
 						<div class="camera_wrap camera_white_skin" id="camera_wrap_1">
+                          <div data-thumb="" data-src="/assets/slides/blank.gif">
+                            <div class="img-responsive camera_caption fadeFromBottom">
+                              <h2>Web Development</h2>
+                            </div>
+                          </div>
 							<div data-thumb="" data-src="/assets/slides/blank.gif">
 								<div class="img-responsive camera_caption fadeFromBottom">
-									<h2>Mobile Apps And Web Development</h2>
+									<h2>Mobile Apps</h2>
 								</div>
 							</div>
-							<div data-thumb="" data-src="/assets/slides/blank.gif">
-								<div class="img-responsive camera_caption fadeFromBottom">
-									<h2>Responsive Web Design</h2>
-								</div>
-							</div>
+                              <div data-thumb="" data-src="/assets/slides/blank.gif">
+                                <div class="img-responsive camera_caption fadeFromBottom">
+                                  <h2>Web Designs</h2>
+                                </div>
+                              </div>
+                          <div data-thumb="" data-src="/assets/slides/blank.gif">
+                            <div class="img-responsive camera_caption fadeFromBottom">
+                              <h2>SEO</h2>
+                            </div>
+                          </div>
 							<div data-thumb="" data-src="/assets/slides/blank.gif">
 								<div class="img-responsive camera_caption fadeFromBottom">
 									<h2>Digital Marketing</h2>
@@ -112,7 +122,7 @@
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter2" style="margin-left: 20px;">0</h3>
-					<h4 style="margin-left: 20px;">Professional Awards</h4>
+					<h4 style="margin-left: 20px;">Coffee with Clients</h4>
 					<p>Consectetur adipiscing elit quisque tempus eget diam et laoreet phasellus ut nisi id leo molestie adipiscing vitae a vel. </p>
 				</div>
 			</div>
@@ -120,15 +130,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 cBusiness">
-					<h3>The Best Way to Create Business Site &ndash; Attractive One Page</h3>
-					<h4>Discover elegant solution for your online business fast, reliable, affordable.</h4>
+					<h3>WE DON’T BELIEVE IN JUST BUILDING A SOFTWARE, BUT WE DELIVER YOU A SOLUTION.</h3>
+					<h4>We provide elegant solution for your online business fast, reliable, affordable.</h4>
 				</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 centPic">
-					<img class="img-responsive"  src="/assets/bizPic.png"/>
+					<img class="img-responsive"  src="http://www.pravestech.ca/assets/home_bg2.jpg  "/>
 				</div>
 			</div>
 		</div>   
@@ -158,59 +168,59 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 wwa">
-					<span name="about" ></span>
-					<h3>Who We Are? Meet Our Team!</h3>
-					<h4>We listen, we discuss, we advise and develop. We love to learn and use the latest technologies.</h4>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row team">
-				<div class="col-md-4 b1">
-						<img class="img-responsive" src="/assets/picTeam/picT1.png">
-						<h4>Tom Simpson</h4>
-						<h5>CEO</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit <br/>quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" ></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-						</ul>
-				</div>
-			
-			
-				<div class="col-md-4">
-						<img class="img-responsive" src="/assets/picTeam/picT2.png">
-						<h4>John Doe</h4>
-						<h5>Project Manager</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" ></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-						</ul>
-				</div>
-		
-			
-				<div class="col-md-4 b3">
-						<img class="img-responsive" src="/assets/picTeam/picT3.png">
-						<h4>Anna White</h4>
-						<h5>Developer</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" ></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-						</ul>
-				</div>
-			</div>
-		</div>
+		<!--<div class="container">-->
+			<!--<div class="row">-->
+				<!--<div class="col-md-12 wwa">-->
+					<!--<span name="about" ></span>-->
+					<!--<h3>Who We Are? Meet Our Team!</h3>-->
+					<!--<h4>We listen, we discuss, we advise and develop. We love to learn and use the latest technologies.</h4>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="container">-->
+			<!--<div class="row team">-->
+				<!--<div class="col-md-4 b1">-->
+						<!--<img class="img-responsive" src="/assets/picTeam/picT1.png">-->
+						<!--<h4>Tom Simpson</h4>-->
+						<!--<h5>CEO</h5>-->
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit <br/>quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>-->
+						<!--<ul>-->
+							<!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-twitter" ></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+						<!--</ul>-->
+				<!--</div>-->
+			<!---->
+			<!---->
+				<!--<div class="col-md-4">-->
+						<!--<img class="img-responsive" src="/assets/picTeam/picT2.png">-->
+						<!--<h4>John Doe</h4>-->
+						<!--<h5>Project Manager</h5>-->
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>-->
+						<!--<ul>-->
+							<!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-twitter" ></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+						<!--</ul>-->
+				<!--</div>-->
+		<!---->
+			<!---->
+				<!--<div class="col-md-4 b3">-->
+						<!--<img class="img-responsive" src="/assets/picTeam/picT3.png">-->
+						<!--<h4>Anna White</h4>-->
+						<!--<h5>Developer</h5>-->
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>-->
+						<!--<ul>-->
+							<!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-twitter" ></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+						<!--</ul>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 hr1">
@@ -846,13 +856,13 @@
 					<ul>
 						<li><i class="fa fa-home"></i>5512 Lorem Ipsum Vestibulum 666/13</li>
 						<li><i class="fa fa-phone"></i>+1 800 789 50 12, +1 800 450 6935</li>
-						<li><a href="#"><i class="fa fa-envelope"></i>mail@compname.com</li></a>
+						<li><a href="#"><i class="fa fa-envelope"></i>mail@compname.com</a></li>
 						<li><i class="fa fa-skype"></i>compname</li>
-						<li><a href="#"><i class="fa fa-twitter"></i>Twitter</li></a>
-						<li><a href="#"><i class="fa fa-facebook-square"></i>Facebook</li></a>
-						<li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</li></a>
-						<li><a href="#"><i class="fa fa-flickr"></i>Flickr</li></a>
-						<li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</li></a>
+						<li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
+						<li><a href="#"><i class="fa fa-facebook-square"></i>Facebook</a></li>
+						<li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</a></li>
+						<li><a href="#"><i class="fa fa-flickr"></i>Flickr</a></li>
+						<li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</a></li>
 					</ul>
 				</div>
 			</div>
@@ -977,13 +987,13 @@
 						var curval=parseInt($('#counter').text());
 						var curval1=parseInt($('#counter1').text().replace(' ',''));
 						var curval2=parseInt($('#counter2').text());
-						if(curval<=707){
+						if(curval<=112){
 							$('#counter').text(curval+1);
 						}
-						if(curval1<=12280){
+						if(curval1<=56){
 							$('#counter1').text(sdf_FTS((curval1+20),0,' '));
 						}
-						if(curval2<=245){
+						if(curval2<=642){
 							$('#counter2').text(curval2+1);
 						}
 					}, 2);
