--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -53,7 +53,7 @@
 				<div class="logo col-md-4">
 					<div>
 						<a href="#">
-							<img src="/assets/logo.png">
+							<img class="logo_width" src="/assets/ThinkTech_white.png">
 						</a>
 					</div>
 				</div>
@@ -135,13 +135,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 centPic">
-					<img class="img-responsive"  src="http://www.pravestech.ca/assets/home_bg2.jpg  "/>
-				</div>
-			</div>
-		</div>   
+		<!--<div class="container">-->
+			<!--<div class="row">-->
+				<!--<div class="col-md-12 centPic">-->
+					<!--<img class="img-responsive"  src="http://www.pravestech.ca/assets/home_bg2.jpg  "/>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>   -->
     </div>
     
     <!--about start-->    
