--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2077,4 +2077,11 @@ margin-bottom: 35px !important;
     width: 240px;
 }
 
+.p45{
+    padding-top: 45px;
+    padding-bottom: 15px;
+}
 
+.m10{
+    margin: 10px;
+}
