--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -164,7 +164,7 @@
 					<div class="col-md-4 Fully">
 						<i class="fa fa-tablet"></i>
 						<h4>Fully Responsive</h4>
-						<p>, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>
+						<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>
 					</div>		
 				</div>
 			</div>
