--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -21,7 +21,7 @@
 		<script type="text/javascript" src="/assets/myscript.js"></script>
 		<script type="text/javascript" src="/assets/sorting.js" ></script>
 		<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
-		<script type="text/javascript" src="/assets/current.js" ></script>
+
 		<!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
 		
 
@@ -53,7 +53,7 @@
 			<div class="row">
 				<div class="logo col-md-4">
 					<div>
-						<a href="#">
+						<a href="/">
 							<img class="logo_width" src="/assets/ThinkTech_white.png">
 						</a>
 					</div>
@@ -230,7 +230,7 @@
 			</div>
 		</div>		
 		<div class="container">
-			<div class="row">
+			<div class="row text-center">
 				<div class="col-md-3 bar">
 					<div class="progB chart" data-percent="64"  data-animate="3500">
 						<div class="chart chart-content">
@@ -659,25 +659,69 @@
 			</div>
 		</div>
        <section class="clients">
-         <div class="container">
-           <ul class="list-inline list-client-logo">
-             <li>
-               <a href="#"><img class="logo_width" src="/assets/clients/calgarysp.png" alt="logo"></a>
-             </li>
-             <li>
-               <a href="#"><img class="logo_width" src="/assets/clients/CMC_client.png" alt="logo"></a>
-             </li>
-             <li>
-               <a href="#"><img class="logo_width" src="/assets/clients/cmit_client.png" alt="logo"></a>
-             </li>
-             <li>
-               <a href="#"><img class="logo_width" src="/assets/clients/goi_client.png" alt="logo"></a>
-             </li>
-             <li>
-               <a href="#"><img class="logo_width" src="/assets/clients/idea2ins_client.png" alt="logo"></a>
-             </li>
-           </ul>
-         </div>
+
+       	<div class="well hidden-xs" id="client_carousel">     
+    <div id="myCarousel" class="carousel slide">     
+    <!-- <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol> -->
+     
+    <!-- Carousel items -->
+    <div class="carousel-inner">
+        
+    <div class="item active">
+        <div class="row-fluid"> 
+            <h3 class="text-center">
+                <strong>Our Awesome Clients</strong>
+            </h3>
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/clientlogo1.png", class: "image_responsive", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
+            </div> 
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/clientlogo2.png", class: "image_responsive", alt: "CMC") %><h5><b>CONFIDENT MARKETING CLUB</b></h5>
+            </div>            
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/clientlogo3.jpg", class: "image_responsive", alt: "CMIT") %><h5><b>CMIT SOLUTIONS</b></h5>
+            </div>
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/clientlogo4.png", class: "image_responsive", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
+            </div> 
+        </div><!--/row-fluid-->
+    </div><!--/item-->
+     
+    <div class="item">
+        <div class="row-fluid">
+            <h3 class="text-center">
+                <strong>Our Awesome Clients</strong>
+            </h3>
+            <div class="col-xs-3 col-sm-3  text-center">
+              <%= image_tag("clients/clientlogo5.jpg", class: "image_responsive", alt: "CSP") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
+            </div>       
+
+            <div class="col-xs-3 col-sm-3  text-center">
+              <%= image_tag("clients/clientlogo1.png", class: "image_responsive", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
+            </div>
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/clientlogo4.png", class: "image_responsive", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
+            </div>
+            
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/clientlogo3.jpg", class: "image_responsive", alt: "CMIT") %><h5><b>CMIT SOLUTIONS</b></h5>
+            </div>
+        </div><!--/row-fluid-->
+    </div><!--/item-->
+     
+    
+     
+    </div><!--/carousel-inner-->
+     
+    <a class="left carousel-control"  href="#myCarousel" data-slide="prev">‹</a>
+    <a class="right carousel-control"  href="#myCarousel" data-slide="next">›</a>
+    </div><!--/myCarousel-->
+     
+    </div><!--/well-->
+
        </section>
 			
 			
