--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2077,6 +2077,11 @@ margin-bottom: 35px !important;
     width: 240px;
 }
 
+.client_logo{
+    width: 220px;
+    height: 120px;
+}
+
 .p45{
     padding-top: 45px;
     padding-bottom: 15px;
