--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -663,7 +663,7 @@
        	<div class="well hidden-xs" id="client_carousel">     
     <div id="myCarousel" class="carousel slide">     
     <!-- <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-sbunlide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
     </ol> -->
      
@@ -676,16 +676,16 @@
                 <strong>Our Awesome Clients</strong>
             </h3>
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/clientlogo1.png", class: "image_responsive", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
+              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
             </div> 
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/clientlogo2.png", class: "image_responsive", alt: "CMC") %><h5><b>CONFIDENT MARKETING CLUB</b></h5>
+              <%= image_tag("clients/CMC_client.png", class: "image_responsive client_logo", alt: "CMC") %><h5><b>CONFIDENT MARKETING CLUB</b></h5>
             </div>            
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/clientlogo3.jpg", class: "image_responsive", alt: "CMIT") %><h5><b>CMIT SOLUTIONS</b></h5>
+              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo", alt: "CMIT") %><h5><b>CMIT SOLUTIONS</b></h5>
             </div>
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/clientlogo4.png", class: "image_responsive", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
+              <%= image_tag("clients/idea2ins_client.png", class: "image_responsive client_logo", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
             </div> 
         </div><!--/row-fluid-->
     </div><!--/item-->
@@ -696,11 +696,11 @@
                 <strong>Our Awesome Clients</strong>
             </h3>
             <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/clientlogo5.jpg", class: "image_responsive", alt: "CSP") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
+              <%= image_tag("clients/calgarysp.png", class: "image_responsive", alt: "CSP") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
             </div>       
 
             <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/clientlogo1.png", class: "image_responsive", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
+              <%= image_tag("clients/logolel_client.png", class: "image_responsive", alt: "GLORY OF INDIA") %><h5><b>Leela Eco Spa</b></h5>
             </div>
             <div class="col-xs-3 col-sm-3 text-center">
               <%= image_tag("clients/clientlogo4.png", class: "image_responsive", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
