--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -114,17 +114,17 @@
 				<div class="col-md-4 project">
 					<h3 id="counter">0</h3>
 					<h4>Awesome Projects</h4>
-					<p>Dolor sit amet, consectetur adipiscing elit quisque tempus eget diam et lorem a laoreet phasellus ut nisi id leo molestie. </p>
+					<p>We use best tools for Project Management and the journy has ben easy so far, Working with all different platforms and devices.</p>
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter1">0</h3>
 					<h4>Happy Customers</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus eget diam et. laoreet phasellus ut nisi id leo.  </p>
+					<p>Understanding our customer business and developing a solution based on that is the secret of our Happy Customers.</p>
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter2" style="margin-left: 20px;">0</h3>
 					<h4 style="margin-left: 20px;">Coffee with Clients</h4>
-					<p>Consectetur adipiscing elit quisque tempus eget diam et laoreet phasellus ut nisi id leo molestie adipiscing vitae a vel. </p>
+					<p>We never miss a chance to have a coffee with our clients and knowing the better. You are always welcome.</p>
 				</div>
 			</div>
 		</div>
@@ -154,17 +154,17 @@
 					<div class="col-md-4 Des">
 						<i class="fa fa-heart"></i>
 						<h4>Fresh & Clean Design</h4>
-						<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>
+						<!--<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>
 					<div class="col-md-4 Ver">
 						<i class="fa fa-cog"></i>
 						<h4>Very Flexible</h4>
-						<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>
+						<!--<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>
 					<div class="col-md-4 Fully">
 						<i class="fa fa-tablet"></i>
 						<h4>Fully Responsive</h4>
-						<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>
+						<!--<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>		
 				</div>
 			</div>
@@ -232,55 +232,55 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-md-3 bar">
-					<div class="progB chart" data-percent="64"  data-animate="3500">
+					<div class="progB chart" data-percent="85"  data-animate="3500">
 						<div class="chart chart-content">
-							<div class="percentage" data-percent="64">
-							  <span class="percent">64</span>
+							<div class="percentage" data-percent="85">
+							  <span class="percent">85</span>
 							</div>
 						</div>
 					</div>
 					<div class="textP">
-						<h3>WordPress</h3>
-						<p>Nulla consectetur ornare nibh, a auctor <br/>mauris scelerisque eu proin nec urna quis. </p>
+						<h3>Ruby on Rails</h3>
+						<p>Strong hold in Ruby on Rails applications<br/>Developing Websites and Custom Web Softwares</p>
 					</div>
 				</div>
 				<div class="col-md-3 bar">
-					<div class="progB chart" data-percent="22"  data-animate="3500">
+					<div class="progB chart" data-percent="92"  data-animate="3500">
 						<div class="chart chart-content">
-							<div class="percentage" data-percent="22">
-							  <span class="percent">22</span>
+							<div class="percentage" data-percent="92">
+							  <span class="percent">92</span>
 							</div>
 						</div>
 					</div>
 					<div class="textP">
-						<h3>HTML5</h3>
-						<p>Nulla consectetur ornare nibh, a auctor <br/>mauris scelerisque eu proin nec urna quis. </p>
+						<h3>Bootstrap</h3>
+						<p>Bootstrap, A powerful mobile first <br/>front-end framework for faster and responsive Web Development</p>
 					</div>
 				</div>
 				<div class="col-md-3 bar ">
 					<div class="progB chart" data-percent="84"  data-animate="3500">
 						<div class="chart chart-content">
-							<div class="percentage" data-percent="22">
+							<div class="percentage" data-percent="84">
 							  <span class="percent">84</span>
 							</div>
 						</div>
 					</div>
 					<div class="textP">
-						<h3>CSS3</h3>
-						<p>Nulla consectetur ornare nibh, a auctor <br/>mauris scelerisque eu proin nec urna quis. </p>
+						<h3>Mobile App</h3>
+						<p>Developing for iOS and Android<br/>Give your business a App and reach your goals faster</p>
 					</div>
 				</div>
 				<div class="col-md-3 bar ">
-					<div class="progB chart" data-percent="45"  data-animate="3500">
+					<div class="progB chart" data-percent="90"  data-animate="3500">
 						<div class="chart chart-content">
-							<div class="percentage" data-percent="45">
-							  <span class="percent">45</span>
+							<div class="percentage" data-percent="90">
+							  <span class="percent">90</span>
 							</div>
 						</div>
 					</div>
 					<div class="textP">
-						<h3>Woocommerce</h3>
-						<p>Nulla consectetur ornare nibh, a auctor <br/>mauris scelerisque eu proin nec urna quis. </p>
+						<h3>SEO and Marketing</h3>
+						<p>Increase Google and Bing Ranking of your Website<br/>Taking your business to the next Level</p>
 					</div>
 				</div>
 			</div>
@@ -301,14 +301,14 @@
 				<div class="row about">
 					<div class="col-md-6">
 						<div class="about1">
-						<img class="pic1Ab" src="/assets/picAbout/aboutP1.png">
-							<h3>Anna Smith, Company Inc.</h3>
-							<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra, felis et venenatis. aliquam, nulla nisi lobortis elit ac.</p>
-						</div>
+						<!--<img class="pic1Ab" src="http://confidentmarketingcoach.com/wp-content/uploads/2013/08/LKS_1524f-640x640.jpg">-->
+							<h3 >Ave Peetri, Coaching by Ave Peetri Inc.</h3>
+							<p>Praves Technology are behind my website www.confidentmarketing.com. They were listening very well to my needs and provided reviews of what they had done on a continuous bases to make sure that we are aligned and that I am getting what I wanted from the website. My website went up on time at the end of last year and has already outperformed my previous website in terms of conversions. I am receiving lots of good comments on the professionalism with which it was created.</p>
+                          </div>
 					</div>
 					<div class="col-md-6">
 						<div class="about2">
-						<img class="pic2Ab" src="/assets/picAbout/aboutP2.png">
+						<!--<img class="pic2Ab" src="/assets/picAbout/aboutP2.png">-->
 							<h3>John Doe, Company Inc.</h3>
 							<p>Consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo, adipiscing auctor, ut auctor feugiat fermentum nec quisque eget pharetra, felis et venenatis aliquam, nulla nisi lobortis elit, ac luctus.</p>
 						</div>
@@ -322,14 +322,14 @@
 				<div class="row about">
 					<div class="col-md-6">
 						<div class="about1">
-						<img class="pic1Ab" src="/assets/picAbout/aboutP3.png">
+						<!--<img class="pic1Ab" src="/assets/picAbout/aboutP3.png">-->
 							<h3>Tom Sawyer, Company Inc.</h3>
 							<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra, felis et venenatis aliquam, nulla nisi lobortis elit, acnterdum ante feugiat vitae.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="about2">
-						<img class="pic2Ab" src="/assets/picAbout/aboutP4.png">
+						<!--<img class="pic2Ab" src="/assets/picAbout/aboutP4.png">-->
 							<h3>Sarah White, Company Inc.</h3>
 							<p>Mauris scelerisque eu proin nec urna nec a quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra felis et venenatis aliquam, nulla nisi lobortis elit, ac eleifend nisl ante nec lorem. </p>
 						</div>
@@ -660,7 +660,7 @@
 		</div>
        <section class="clients">
 
-       	<div class="well hidden-xs" id="client_carousel">     
+       	<div class="hidden-xs" id="client_carousel">
     <div id="myCarousel" class="carousel slide">     
     <!-- <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-sbunlide-to="0" class="active"></li>
@@ -696,18 +696,18 @@
                 <strong>Our Awesome Clients</strong>
             </h3>
             <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/calgarysp.png", class: "image_responsive", alt: "CSP") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
+              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo", alt: "Calgary Service Plumbers") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
             </div>       
 
             <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logolel_client.png", class: "image_responsive", alt: "GLORY OF INDIA") %><h5><b>Leela Eco Spa</b></h5>
+              <%= image_tag("clients/logolel_client.png", class: "image_responsive client_logo", alt: "Leela Eco Spa") %><h5><b>Leela Eco Spa</b></h5>
             </div>
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/clientlogo4.png", class: "image_responsive", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
+              <%= image_tag("clients/peak1logo.jpg", class: "image_responsive client_logo", alt: "Peak1 Management Group") %><h5><b>Peak1 Management Group</b></h5>
             </div>
             
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/clientlogo3.jpg", class: "image_responsive", alt: "CMIT") %><h5><b>CMIT SOLUTIONS</b></h5>
+              <%= image_tag("clients/kennan-logo.png", class: "image_responsive client_logo", alt: "Ken-nan") %><h5><b>KEN-NAN Automotive Sales</b></h5>
             </div>
         </div><!--/row-fluid-->
     </div><!--/item-->
@@ -730,77 +730,77 @@
    
    <!-- Career start -->
 
-   <div id="career">
-    	<div class="line4">		
-			<div class="container">
-				<div class="row Ama">
-					<div class="col-md-12">
-					<h3>Career</h3>
-					<p>OPPORTUNITIES TO CLIMB GREATER HEIGHTS</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 wwa">
-					<span name="about" ></span>
-					<h3>Who We Are? Meet Our Team!</h3>
-					<h4>We listen, we discuss, we advise and develop. We love to learn and use the latest technologies.</h4>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row team">
-				<div class="col-md-4 b1">
-						<img class="img-responsive" src="/assets/picTeam/picT1.png">
-						<h4>Tom Simpson</h4>
-						<h5>CEO</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit <br/>quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" ></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-						</ul>
-				</div>
-			
-			
-				<div class="col-md-4">
-						<img class="img-responsive" src="/assets/picTeam/picT2.png">
-						<h4>John Doe</h4>
-						<h5>Project Manager</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" ></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-						</ul>
-				</div>
-		
-			
-				<div class="col-md-4 b3">
-						<img class="img-responsive" src="/assets/picTeam/picT3.png">
-						<h4>Anna White</h4>
-						<h5>Developer</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" ></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-						</ul>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 hr1">
-					<hr/>
-				</div>
-			</div>
-		</div>		
+   <!--<div id="career">-->
+    	<!--<div class="line4">		-->
+			<!--<div class="container">-->
+				<!--<div class="row Ama">-->
+					<!--<div class="col-md-12">-->
+					<!--<h3>Career</h3>-->
+					<!--<p>OPPORTUNITIES TO CLIMB GREATER HEIGHTS</p>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="container">-->
+			<!--<div class="row">-->
+				<!--<div class="col-md-12 wwa">-->
+					<!--<span name="about" ></span>-->
+					<!--<h3>Who We Are? Meet Our Team!</h3>-->
+					<!--<h4>We listen, we discuss, we advise and develop. We love to learn and use the latest technologies.</h4>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="container">-->
+			<!--<div class="row team">-->
+				<!--<div class="col-md-4 b1">-->
+						<!--<img class="img-responsive" src="/assets/picTeam/picT1.png">-->
+						<!--<h4>Tom Simpson</h4>-->
+						<!--<h5>CEO</h5>-->
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit <br/>quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>-->
+						<!--<ul>-->
+							<!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-twitter" ></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+						<!--</ul>-->
+				<!--</div>-->
+			<!---->
+			<!---->
+				<!--<div class="col-md-4">-->
+						<!--<img class="img-responsive" src="/assets/picTeam/picT2.png">-->
+						<!--<h4>John Doe</h4>-->
+						<!--<h5>Project Manager</h5>-->
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>-->
+						<!--<ul>-->
+							<!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-twitter" ></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+						<!--</ul>-->
+				<!--</div>-->
+		<!---->
+			<!---->
+				<!--<div class="col-md-4 b3">-->
+						<!--<img class="img-responsive" src="/assets/picTeam/picT3.png">-->
+						<!--<h4>Anna White</h4>-->
+						<!--<h5>Developer</h5>-->
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br/> quisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget.</p>-->
+						<!--<ul>-->
+							<!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-twitter" ></i></a></li>-->
+							<!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+						<!--</ul>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="container">-->
+			<!--<div class="row">-->
+				<!--<div class="col-md-12 hr1">-->
+					<!--<hr/>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>		-->
 		<!--<div class="container">-->
 			<!--<div class="row">-->
 				<!--<div class="col-md-3 bar">-->
@@ -920,7 +920,7 @@
 				<div class="row Ama">
 					<div class="col-md-12">
 					<h3>THANKS FOR VISITING US</h3>
-					<p>SITUATED IN CALGARY, CANADA</p>
+					<p>WE ARE SITUATED IN CALGARY, CANADA</p>
 					</div>
 				</div>
 			</div>
@@ -943,15 +943,15 @@
 				</div>
 				<div class="col-md-3 col-xs-12 cont">
 					<ul>
-						<li><i class="fa fa-home"></i>5512 Lorem Ipsum Vestibulum 666/13</li>
-						<li><i class="fa fa-phone"></i>+1 800 789 50 12, +1 800 450 6935</li>
-						<li><a href="#"><i class="fa fa-envelope"></i>mail@compname.com</a></li>
-						<li><i class="fa fa-skype"></i>compname</li>
+						<li><i class="fa fa-home"></i>Bankers Hall, Suite# 1000, 888 3st SW</li>
+						<li><i class="fa fa-phone"></i>+1 403 462 0868</li>
+						<li><a href="#"><i class="fa fa-envelope"></i>ashish@thethinktech.com</a></li>
+						<li><i class="fa fa-skype"></i>thethinktech</li>
 						<li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
 						<li><a href="#"><i class="fa fa-facebook-square"></i>Facebook</a></li>
-						<li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</a></li>
-						<li><a href="#"><i class="fa fa-flickr"></i>Flickr</a></li>
-						<li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</a></li>
+						<!--<li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</a></li>-->
+						<!--<li><a href="#"><i class="fa fa-flickr"></i>Flickr</a></li>-->
+						<!--<li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</a></li>-->
 					</ul>
 				</div>
 			</div>
@@ -964,14 +964,14 @@
 				<div class="col-md-12">
 				<a id="features"></a>
 				<h3>We Care About Our Clients and Can Make Their Life Easier!</h3>
-				<p>The main peculiarity of template is the striking presentation when visitors just need to use the scrolling option to find all necessary information about your web project. </p>
+				<!--<p>The main peculiarity of template is the striking presentation when visitors just need to use the scrolling option to find all necessary information about your web project. </p>-->
 				</div>
-				<div class="cBtn">
-					<ul style="margin-top: 23px; margin-bottom: 0px; padding-left: 26px;">
-						<li class="dowbload"><a href="#"><i class="fa fa-star"></i>View All Features</a></li>
-						<li class="buy"><a href="#"><i class="fa fa-download"></i>Buy This Template</a></li>
-					</ul>
-			</div>
+				<!--<div class="cBtn">-->
+					<!--<ul style="margin-top: 23px; margin-bottom: 0px; padding-left: 26px;">-->
+						<!--<li class="dowbload"><a href="#"><i class="fa fa-star"></i>View All Features</a></li>-->
+						<!--<li class="buy"><a href="#"><i class="fa fa-download"></i>Buy This Template</a></li>-->
+					<!--</ul>-->
+			<!--</div>-->
 			</div>
 		</div>
 		<div class="line7">
@@ -1011,7 +1011,7 @@
 						<input  id="searchPattern" type="search" placeholder="Search the Site"/><i class="glyphicon glyphicon-search" style="font-size: 13px; color:#a5a5a5;" id="iS"></i>
 					</div>
 					<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; 2015 Thinktech. All Rights Reserved.</p>
+						<p>Copyright &copy; 2015 ThinkTech. All Rights Reserved.</p>
 					</div>
 					<div class="col-md-6 text-right dm">
 						<ul id="downMenu">
