--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-		<title>Timber</title>
+		<title>ThinkTech</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
@@ -21,8 +22,7 @@
 		<script type="text/javascript" src="/assets/myscript.js"></script>
 		<script type="text/javascript" src="/assets/sorting.js" ></script>
 		<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
-
-		<!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
+    <!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
 		
 
 		<script>
@@ -671,10 +671,7 @@
     <div class="carousel-inner">
         
     <div class="item active">
-        <div class="row-fluid"> 
-            <h3 class="text-center">
-                <strong>Our Awesome Clients</strong>
-            </h3>
+        <div class="row-fluid">
             <div class="col-xs-3 col-sm-3 text-center">
               <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
             </div> 
@@ -692,9 +689,6 @@
      
     <div class="item">
         <div class="row-fluid">
-            <h3 class="text-center">
-                <strong>Our Awesome Clients</strong>
-            </h3>
             <div class="col-xs-3 col-sm-3  text-center">
               <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo", alt: "Calgary Service Plumbers") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
             </div>       
