--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,7 +12,7 @@ html{
 	background:#fff;
 }
 body{
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 }
 .headerLine{
 	position: relative;
@@ -49,7 +49,7 @@ body{
 }*/
 .logo{
 	margin-top: 60px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:30px;
 	font-weight:700;
 	text-transform:uppercase;
@@ -61,7 +61,7 @@ body{
 .logo p{
 	letter-spacing: 0.5px;
 	margin-top: -10px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:12px;
 	font-weight:300;
 	text-transform:lowercase;
@@ -105,7 +105,7 @@ border: none;
 	padding-left: 17px;
 	padding-right: 16px;
 	float:left;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:14px;
 	color:#fff;
 	list-style:none;
@@ -266,20 +266,20 @@ border: none;
 }
 .project h3{
 	letter-spacing: 1px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:37px;
 	font-weight:400;
 	color:#2f2f2f;
 }
 .project h4{
 	margin-left: -5px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:20px;
 	font-weight:300;
 	color:#2f2f2f;
 }
 .project p{
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:13px;
 	font-weight:300;
 	margin-top: 16px;
@@ -293,14 +293,14 @@ border: none;
 }
 .cBusiness h3{
 	text-align:center;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:28px;
 	font-weight:400;
 }
 .cBusiness h4{
 	margin-top: 16px;
 	text-align:center;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:16px;
 	font-weight:300;
 }
@@ -393,12 +393,12 @@ border: none;
 .Fresh h4{
 	//margin-left: -15px;
 	margin-top: 17px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size:20px;
 	font-weight:300;
 }
 .Fresh p{
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-size: 13px;
 	font-weight: 300;
 	margin-top: 12px;
@@ -440,14 +440,14 @@ border: none;
 .wwa h3{
 	font-size:28px;
 	color:#2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 400;
 }
 .wwa h4{
 	margin-top: 15px;
 	font-size:16px;
 	color:#2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 }
 /**/
@@ -468,21 +468,21 @@ border: none;
 	margin-top: 24px;
 	font-size:20px;
 	color:#2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 }
 .team h5{
 	margin-top: -3px;
 	font-size:13px;
 	color:#a9a9a9;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 }
 .team p{
 	margin-top: 12px;
 	font-size: 13px;
 	color: #666;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 	line-height: 24px;
 
@@ -553,7 +553,7 @@ border: none;
 	margin-top: -19px;
 	font-size:18px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 700;
 }
 .percent:after {
@@ -562,13 +562,13 @@ border: none;
 	font-size: .8em;
 	font-size:18px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 700;
 }
 .chart sup{
 	font-size:18px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 700;
 	
 	top: 0px !important;
@@ -580,7 +580,7 @@ border: none;
 	text-align:center;
 	font-size:20px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 }
 .textP p{
@@ -589,7 +589,7 @@ border: none;
 	text-align:center;
 	font-size:13px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 }
 .bar{
@@ -610,21 +610,21 @@ border: none;
 
 	font-size:28px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 400;
 }
 .about h3{
 	margin-top: 51px;
 	font-size:16px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 }
 .about p{
 	font-size: 13px;
 	line-height: 22px;
 	color: #666666;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 	margin-top: 12px;
 	margin-bottom: 0;
@@ -738,7 +738,7 @@ border: none;
 	font-size: 42px;
 	text-align:center;
 	color: #fff;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 400;
 	margin-top: 17px;
 }
@@ -746,7 +746,7 @@ border: none;
 	font-size: 16px;
 	text-align:center;
 	color: #fff;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 /**/
@@ -789,7 +789,7 @@ border: none;
 	color:#fff;
 	font-size: 13px;
 	text-align:center;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 700;
 }
 .cBtn ul li:hover{
@@ -831,7 +831,7 @@ border: none;
 	color:#fff;
 	font-size: 13px;
 	text-align:center;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 700;
 	
 	//margin-bottom: 15px;
@@ -896,7 +896,7 @@ border: none;
 	color:#2f2f2f;
 	font-size: 16px;
 	text-align:center;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 .view li{
@@ -907,7 +907,7 @@ border: none;
 	color:#a9a9a9;
 	font-size: 13px;
 	text-align:center;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 .view a:hover{
@@ -953,7 +953,7 @@ border: none;
 	display:inline-block;
 	color:#a9a9a9;
 	font-size: 13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 .pb2{
@@ -977,7 +977,7 @@ border: none;
 }
 .cBtn .dowbload a, .cBtn .buy a{
 	font-size: 14px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 700;
 }
 .cBtn .buy{
@@ -1057,14 +1057,14 @@ border: none;
 	text-align:center;
 	color:#2f2f2f;
 	font-size: 16px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 .news p{	
 	line-height: 23px;
 	color:#666666;
 	font-size: 13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 .readMore{
@@ -1083,7 +1083,7 @@ border: none;
 	text-align: center;
 	color: #2f2f2f;
 	font-size: 16px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family:  'Armata', sans-serif;
 	font-weight: 300;
 	text-decoration:none;
 }
@@ -1102,7 +1102,7 @@ border: none;
 	list-style:none;
 }
 .news ul li a{
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	color:#a9a9a9;
 	font-size:13px;
@@ -1110,7 +1110,7 @@ border: none;
 	list-style:none;
 }
 .news ul li{
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	color:#a9a9a9;
 	font-size:13px;
@@ -1206,7 +1206,7 @@ border: none;
 	padding-top:10px;
 	padding-bottom:10px;
 	border:0px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	font-size:13px;
 	color:#555555;
@@ -1239,7 +1239,7 @@ textarea {
 	padding-top:10px;
 	padding-bottom:10px;
 	border:0px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	font-size:13px;
 	color:#555555;
@@ -1254,7 +1254,7 @@ textarea {
 	border:0;
 }
 .forma .cBtn a{
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 700;
 	font-size:13px;
 	color:#fff;
@@ -1278,7 +1278,7 @@ textarea {
 	
 }
 .forma .cBtn .clear  a, .cBtn .send a{
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 700;
 }
 .forma .cBtn .send{
@@ -1294,7 +1294,7 @@ textarea {
 .cont{
 	margin-top: 44px;
 	margin-left: -33px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	font-size:13px;
 	color:#666666;
@@ -1386,14 +1386,14 @@ textarea {
 	font-size: 42px;
 	text-align:center;
 	color: #fff;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 400;
 }
 .line6 .Ama p{
 	font-size: 16px;
 	text-align:center;
 	color: #fff;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 }
 /**/
@@ -1406,14 +1406,14 @@ textarea {
 .ftext h3{
 	font-size:28px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 400; 
 	margin-top: 37px;
 }
 .ftext p{
 	font-size:16px;
 	color: #2f2f2f;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	margin-top: 13px;
 	line-height: 24px;
@@ -1475,7 +1475,7 @@ textarea {
 .footer h3{
 	margin-top: 159px;
 	font-size: 28px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 400;
 	color: #fff;
 	text-align: center;
@@ -1483,7 +1483,7 @@ textarea {
 }
 .footer p{
 	font-size:16px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	color:#fff;
 	text-align:center;
@@ -1491,7 +1491,7 @@ textarea {
 .footer .fEmail{
 	float:left;
 	font-size: 13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	border: 0;
 	background: #1c1c1c;
@@ -1507,7 +1507,7 @@ textarea {
 .footer .subS{
 	text-transform:uppercase;
 	font-size: 13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 700;
 	float: left;
 	color: #fff;
@@ -1759,7 +1759,7 @@ textarea {
 }
 .downLine p{
 	font-size:13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	color:#fff;
 }
@@ -1798,7 +1798,7 @@ textarea {
 	padding: 15px;
 	text-decoration: none;
 	font-size: 13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	color: #fff;
 	margin-top: 10px;
@@ -1815,7 +1815,7 @@ textarea {
 	border:0;
 	background:#101010;
 	font-size:13px;
-	font-family: 'Roboto', 'sans-serif';
+	font-family: 'Armata', sans-serif;
 	font-weight: 300;
 	color:#6d6d6d;
 }
