--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -929,7 +929,7 @@
 						<textarea type="text" class="col-md-12 col-xs-12 Message" name='Message' placeholder='Message *'></textarea>
 						<div class="cBtn col-xs-12">
 							<ul>
-								<li class="clear"><a href="#"><i class="fa fa-times"></i>clear form</a></li>
+								<li class="clear"><a href="#"><i class="fa fa-times"></i>Clear Form</a></li>
 								<li class="send"><a href="#"><i class="fa fa-share"></i>Send Message</a></li>
 							</ul>
 						</div>
