--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -51,7 +51,7 @@
 	<div id="menuF" class="default">
 		<div class="container">
 			<div class="row">
-				<div class="logo col-md-4">
+				<div class="logo col-xs-4 col-md-4">
 					<div>
 						<a href="/">
 							<img class="logo_width" src="/assets/ThinkTech_white.png">
