--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,6 +4,7 @@
 		<title>ThinkTech</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
@@ -22,6 +23,9 @@
 		<script type="text/javascript" src="/assets/myscript.js"></script>
 		<script type="text/javascript" src="/assets/sorting.js" ></script>
 		<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
+        <script type="text/javascript" async defer
+                src="https://apis.google.com/js/platform.js?publisherid=104929529486535940210">
+        </script>
     <!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
 		
 
@@ -66,7 +70,7 @@
 							<li><a href="#service">Services</a></li>
 							<li><a href="#technologies">Technologies</a></li>
 							<li><a href="#client">Clients</a></li>
-							<li><a href="#career">Career</a></li>
+							<!--<li><a href="#career">Career</a></li>-->
 							<li class="last"><a href="#contact">Contact</a></li>
 							<!--li><a href="#features">Features</a></li-->
 						</ul>
@@ -660,7 +664,7 @@
 		</div>
        <section class="clients">
 
-       	<div class="hidden-xs" id="client_carousel">
+       	<div class="hidden-xs p70" id="client_carousel">
     <div id="myCarousel" class="carousel slide">     
     <!-- <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-sbunlide-to="0" class="active"></li>
@@ -914,7 +918,7 @@
 				<div class="row Ama">
 					<div class="col-md-12">
 					<h3>THANKS FOR VISITING US</h3>
-					<p>WE ARE SITUATED IN CALGARY, CANADA</p>
+					<p>WE ARE SITUATED IN BANKERS HALL - CALGARY, CANADA</p>
 					</div>
 				</div>
 			</div>
@@ -937,7 +941,7 @@
 				</div>
 				<div class="col-md-3 col-xs-12 cont">
 					<ul>
-						<li><i class="fa fa-home"></i>Bankers Hall, Suite# 1000, 888 3st SW</li>
+						<li><i class="fa fa-home"></i> Suite# 1000, 888 3st SW</li>
 						<li><i class="fa fa-phone"></i>+1 403 462 0868</li>
 						<li><a href="#"><i class="fa fa-envelope"></i>ashish@thethinktech.com</a></li>
 						<li><i class="fa fa-skype"></i>thethinktech</li>
@@ -1153,6 +1157,16 @@
 			
 		});
 	</script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-62321712-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 	</body>
 	
 </html>
