--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,2 +1,38 @@
-<h3> New Article</h3>
-<%= render "form" %>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    
+</head>
+
+<body>
+
+    <div id="home">
+        <div class="headerLine mar_topm10p">
+        <%= render "menu" %>
+            <div class="container pad_bot5">
+                <div class="well">
+                    <div class="row wrap">
+
+                        <div class="col-xs-12 blog text-center">
+                            <h2>BLOG</h2>
+                        </div>
+                        
+                        <div class="col-xs-12">
+                            <%= render "form" %>
+                        </div>
+                            
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+   
+</body>
+</html>
