--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -70,7 +70,7 @@
 							<li><a href="#service">Services</a></li>
 							<li><a href="#technologies">Technologies</a></li>
 							<li><a href="#client">Clients</a></li>
-							<!--<li><a href="#career">Career</a></li>-->
+							<li><a href="/articles">Blog</a></li>
 							<li class="last"><a href="#contact">Contact</a></li>
 							<!--li><a href="#features">Features</a></li-->
 						</ul>
@@ -1020,17 +1020,17 @@
 						<!--input  id="searchPattern" type="search" name="pattern" value="Search the Site" onblur="if(this.value=='') {this.value='Search the Site'; }" onfocus="if(this.value =='Search the Site' ) this.value='';this.style.fontStyle='normal';" style="font-style: normal;"/-->
 						<input  id="searchPattern" type="search" placeholder="Search the Site"/><i class="glyphicon glyphicon-search" style="font-size: 13px; color:#a5a5a5;" id="iS"></i>
 					</div>
-					<div class="col-md-6 text-left copy">
+					<div class="col-md-4 text-left copy">
 						<p>Copyright &copy; 2015 ThinkTech. All Rights Reserved.</p>
 					</div>
-					<div class="col-md-6 text-right dm">
+					<div class="col-md-8 text-right dm">
 						<ul id="downMenu">
 							<li class="active" ><a href="#home">Home</a></li>
 							<li><a href="#about">About</a></li>
 							<li><a href="#service">Services</a></li>
 							<li><a href="#technologies">Technologies</a></li>
 							<li><a href="#client">Clients</a></li>
-							<li><a href="#career">Career</a></li>
+							<li><a href="/articles">Blog</a></li>
 							<li class="last"><a href="#contact">Contact</a></li>
 							<!--li><a href="#features">Features</a></li-->
 						</ul>
