--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
   	<head>
-		<title>ThinkTech</title>
+
+		<% meta title: "Blog | ThinkTech",
+          description: ""          
+  %>
+  <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
