--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-		<title>ThinkTech</title>
+		<% meta title: "ThinkTech | Websites and Apps",
+          description: ""          
+  %>
+  <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
@@ -52,33 +55,8 @@
     
     <div id="home">
     	<div class="headerLine mar_topm10p">
-	<div id="menuF" class="default">
-		<div class="container">
-			<div class="row">
-				<div class="logo col-xs-4 col-md-4">
-					<div>
-						<a href="/">
-							<img class="logo_width" src="/assets/ThinkTech_white.png">
-						</a>
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div class="navmenu"style="text-align: center;">
-						<ul id="menu">
-							<li class="active" ><a href="#home">Home</a></li>
-							<li><a href="#about">About</a></li>
-							<li><a href="#service">Services</a></li>
-							<li><a href="#technologies">Technologies</a></li>
-							<li><a href="#client">Clients</a></li>
-							<li><a href="/articles">Blog</a></li>
-							<li class="last"><a href="#contact">Contact</a></li>
-							<!--li><a href="#features">Features</a></li-->
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
+	<%= render "articles/menu" %>
 		<div class="container">
 			<div class="row wrap">
 				<div class="col-md-12 gallery"> 
