--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,6 +4,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <% meta title: "Blog | ThinkTech"      
+  %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -17,20 +19,22 @@
         <div class="headerLine mar_topm10p">
         <%= render "menu" %>
             <div class="container pad_bot5">
-                <div class="well">
-                    <div class="row wrap">
-
-                        <div class="col-xs-12 blog text-center">
-                            <h2><%= "Editing #{@article.title}" %></h2>
-                        </div>
-                        
-                        <div class="col-xs-12">
-                            <%= render "form" %>
-                        </div>
-                            
-                        
+                <div class="row wrap">
+                    <div class="col-xs-12 blog text-center">
+                        <h2>BLOG</h2>
                     </div>
+                </div>                
+            </div>
+        </div>
+        <div class="container minh pad_bot5">
+            <div class="row">
+                <div class="col-xs-12 blog text-center">
+                    <h2 id="col_black"><%= "Editing #{@article.title}" %></h2>
                 </div>
+                
+                <div class="col-xs-12">
+                    <%= render "form" %>
+                </div> 
             </div>
         </div>
     </div>
