--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,25 +19,26 @@
         <div class="headerLine mar_topm10p">
         <%= render "menu" %>
             <div class="container pad_bot5">
-                <div class="well minh">
-                    <div class="row wrap">
-
-                        <div class="col-xs-12 blog text-center">
-                            <h2>BLOG</h2>
-                        </div>
-                        
-                        <div class="col-xs-12 col-sm-2 text-center">
-                            <h2 class="entry-meta">
-                                <span><%= @article.created_at.strftime("%Y %B %d, %H:%M:%S") %></span>
-                            </h2>
-                        </div>
-                            
-                        <div class="col-xs-12 col-sm-10">
-                            <h2><%= @article.title.html_safe %></h2>
-                            <p><%= @article.body.html_safe %></p>
-                        </div>                            
-
+                <div class="row wrap">
+                    <div class="col-xs-12 blog text-center">
+                        <h2>BLOG</h2>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="container minh">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="col-xs-12 col-sm-2 text-center">
+                        <h2 class="entry-meta">
+                            <span><%= @article.created_at.strftime("%Y %B %d, %H:%M:%S") %></span>
+                        </h2>
+                    </div>
+                        
+                    <div class="col-xs-12 col-sm-10">
+                        <h2><%= @article.title.html_safe %></h2>
+                        <p><%= @article.body.html_safe %></p>
+                    </div> 
                 </div>
             </div>
         </div>
